<resources>
    <string name="app_name">DM_my_DnD</string>
    <string name="edit_message">Enter a message</string>
    <string name="Button">Send</string>
    <string name="Aberrations">Aberration</string>
    <string name="Beasts">Beast</string>
    <string name="Celestials">Celestial</string>
    <string name="Constructs">Construct</string>
    <string name="Dragons">Dragon</string>
    <string name="Elemental">Elemental</string>
    <string name="Fey">Fey</string>
    <string name="Fiends">Fiend</string>
    <string name="Giants">Giant</string>
    <string name="Humanoids">Humanoid</string>
    <string name="Monstrosities">Monstrosity</string>
    <string name="Oozes">Ooze</string>
    <string name="Plants">Plant</string>
    <string name="Undead">Undead</string>
    <string name="AllMonsters">All Monsters</string>
    <string name="SearchMonster">Search...</string>
    AllMonsters

</resources>
