<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/parchment"
    tools:context="com.example.josippc.dm_my_dnd.MonsterView">


    <ImageView
        android:id="@+id/MonsterBackground"
        android:adjustViewBounds="false"

        android:contentDescription="BackgroundPicture"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/allmonsters"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/AllMonsters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Celestials"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Celestials"
        app:layout_constraintEnd_toStartOf="@+id/Constructs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Aberrations" />

    <Button
        android:id="@+id/Dragons"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Dragons"
        app:layout_constraintEnd_toStartOf="@+id/Elemental"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Celestials" />

    <Button
        android:id="@+id/Giants"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Giants"
        app:layout_constraintEnd_toStartOf="@+id/Humanoids"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fey" />

    <Button
        android:id="@+id/Fey"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Fey"
        app:layout_constraintEnd_toStartOf="@+id/Fiends"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Dragons" />

    <Button
        android:id="@+id/Monstrosities"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Monstrosities"
        app:layout_constraintEnd_toStartOf="@+id/Oozes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Giants" />

    <Button
        android:id="@+id/Plants"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Plants"
        app:layout_constraintEnd_toStartOf="@+id/Undead"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Monstrosities" />

    <Button
        android:id="@+id/Beasts"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Beasts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allmonsters" />

    <Button
        android:id="@+id/Humanoids"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Humanoids"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fiends" />

    <Button
        android:id="@+id/Fiends"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Fiends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Elemental" />

    <Button
        android:id="@+id/Elemental"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Elemental"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Constructs" />

    <Button
        android:id="@+id/Constructs"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Constructs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Beasts" />

    <Button
        android:id="@+id/Oozes"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Oozes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Humanoids" />

    <Button
        android:id="@+id/Undead"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Undead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Oozes" />

    <Button
        android:id="@+id/Aberrations"
        android:layout_width="165dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/dark_crimson"
        android:fontFamily="@font/adam"
        android:onClick="openMonsterInfo"
        android:text="@string/Aberrations"
        app:layout_constraintEnd_toStartOf="@+id/Beasts"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allmonsters" />
</android.support.constraint.ConstraintLayout>
